Reduce some unnecessary Guava usage